--- a/index.html
+++ b/index.html
@@ -8,7 +8,59 @@
 </head>
 
 <body>
+    <div>
+        <h1 style="color: red;">Bài Tập 1: Tính Tiền Lương Nhân Viên</h1>
+        <input type="text" id="luongMotNgay">
+        <input type="text" id="soNgayLam">
+        <button id="tinhLuong">Tính Lương</button>
+        <p id="result_1"></p>
+    </div>
+
+    <div>
+        <h1 style="color: red;">Bài Tập 2: Tính Giá Trị Trung Bình</h1>
+        <input type="text" id="soa">
+        <input type="text" id="sob">
+        <input type="text" id="soc">
+        <input type="text" id="sod">
+        <input type="text" id="soe"><br><br>
+        <button id="tinhTrungBinh">Tính Trung Bình</button>
+        <p id="result_2"></p>
+    </div>
+
+    <div>
+        <h1 style="color: red;">Bài Tập 3: Đổi Tiền</h1>
+        <input type="text" id="USD">
+        <input type="text" id="tienViet">
+        <button id="tinhTien">Tính Giá Tiền</button>
+        <p id="result_3"></p>
+    </div>
+
+    <div>
+        <h1 style="color: red;">Bài Tập 4: Tính Diện Tích, Chu Vi Hình Chữ Nhật</h1>
+        <input type="text" id="chieuDai">
+        <input type="text" id="chieuRong">
+        <button id="tinh">Tính</button>
+        <div>
+            <p id="chuVi"></p>
+            <p id="dienTich"></p>
+        </div>
+    </div>
+
+    <div>
+        <h1 style="color: red;">Bài Tập 5: Tổng Ký Hai Số</h1>
+        <input type="text" id="soHaiChuSo">
+        <button id="tinhTổng">Tính Tổng</button>
+        <p id="result_4"></p>
+    </div>
+
+
+
+
+
     <script src="./index.js"></script>
+
+
+
 </body>
 
 </html>
